horizontal scroll bug fixed

--- a/styles/media_frame.css
+++ b/styles/media_frame.css
@@ -14,6 +14,7 @@
     overflow-y: hidden;
     order: 0;
     scrollbar-width: none;
+    box-sizing: border-box;
 }
 
 .media_holder.video_holder::-webkit-scrollbar {
